# OpenGLCalc

./: CMakeLists.txt  CalculatorApp.cpp  CalculatorApp.hpp  Display.cpp  Display.hpp  README.md  RPNCalculator.cpp  RPNCalculator.hpp  glad.c  main.cpp
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Debug/Utilities/: cmake_install.cmake
Debug/glfw/: cmake_install.cmake  cmake_uninstall.cmake
Debug/glfw/src/: cmake_install.cmake
Release/: CMakeCache.txt  build.ninja  cmake_install.cmake
Release/Utilities/: cmake_install.cmake
Release/glfw/: cmake_install.cmake  cmake_uninstall.cmake
Release/glfw/src/: cmake_install.cmake  glfw3.pc
Shaders/Button/: button.frag  button.vert
Shaders/String/: string.frag  string.vert
Utilities/: Button.hpp  CMakeLists.txt  Font.cpp  Font.hpp  FontAtlas.cpp  FontAtlas.hpp  Glyph.hpp  GraphicsMath.hpp  Program.cpp  Program.hpp  Rect.hpp  Resource.hpp  String.cpp  String.hpp  Window.cpp  Window.hpp
include/: stb_truetype.h
include/glad/: glad.h
